@startuml
skinparam classAttributeIconSize 0
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0



class AgendaEntryDTO {

    date
    greenSpace
    description
    expectedDuration
    urgencyDegree
    entryStatus
    associatedTeam
    associatedVehicles

}

class Vehicle {
        brand
        model
        vehicleID
        type
        tare
        grossWeight
        currentKm
        registerDate
        acquisitionDate
        checkupFrequency
        checkUpList
}
class SystemUser {
    name
    email
    password
    phone
}


class AgendaEntryRepository {
    - ArrayList<AgendaEntry> agendaEntries
    +getAgendaEntryWithoutDoneList(authenticationController.getCurrentUserEmail()
    +assignVehicles(mapperAgenda.toEntity(agendaEntry), mapperVehicle.toEntityList(vehiclesList)
}

class Repositories {
    - agendaEntryRepository
    -teamRepository

    - Repositories()
    + getInstance()
    + getAgendaEntryRepository()
    + getVehicleRepository()

}

class AgendaEntryMapper {
    + toDtoList(agendaEntryList)

}


class AssignVehiclesController {
    - AgendaEntryRepository agendaEntryRepository
    - AgendaEntryMapper agendaEntryMapper

    +getAgendaEntryListDTO()
    +getVehiclesListDTO()
     + assignVehciles(selectedEntry, vehicleList))
}

class AssignVehiclesUI {

}

class AgendaEntry {
    date
    associatedVehicle
    associatedVehicles
    +setAssociatedVehicle(vehicle)
}

class VehicleRepository{
    ArrayList<Vehicle> vehicles
    +getVehicles()

}

class VehicleMapper {
+toDtoList(ArrayList<Vehicle> vehicles)
+toDtoList(vehicleList)

}

class VehicleDTO {
ArrayList<Vehicle> vehicles
}
class ToDoEntry{
         greenSpace
         expectedDuration
         degreeUrgency
         entryStatus
}





AssignVehiclesUI .>AssignVehiclesController
AssignVehiclesController ..> Repositories : repositories
Repositories --> "1" AgendaEntryRepository
Repositories -> Repositories : instance
AssignVehiclesController .> AgendaEntryMapper
AssignVehiclesController .> VehicleMapper
AssignVehiclesController --> AgendaEntryRepository : uses

SystemUser <|- GSM
ToDoEntry <|-- AgendaEntry

GSM "1" -- "1" AssignVehiclesUI
AgendaEntry "*" <-- "1" AgendaEntryRepository : stores
AgendaEntry"1" --> "1" Vehicle: assigned to
Vehicle "*" <-- "1" VehicleRepository : stores
AgendaEntryDTO "*" <-- "1" AgendaEntryMapper : creates
VehicleDTO "*" <-- "1" VehicleMapper : creates
Agenda "1" -- "*" AgendaEntry : has >




@enduml
